wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-app
  labels:
    app: wordpress-app
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: wordpress-app
  template: 
    metadata: 
      labels: 
        app: wordpress-app
    spec:
      containers:
      - name:   wordpress-app
        image: wordpress:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 80

---

apiVersion: v1 
kind: Service 
metadata:
  name: wordpress-app-svc
spec:
  selector: 
    app: wordpress-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30008
