ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: jenkins-ingress
spec: 
  rules: 
  - host: my-jenkins.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: jenkins-app-svc
            port: 
              number: 8080
     

---
