ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
spec: 
  rules: 
  - host: my-nginx.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: nginx-app-svc
            port: 
              number: 80
     

---
